--- a/prefect.yaml
+++ b/prefect.yaml
@@ -16,7 +16,11 @@ push: null
 pull:
 - prefect.deployments.steps.git_clone:
     repository: git@github.com:kevingrismore/version-testing.git
-    branch: other
+    branch: main
+- prefect.deployments.steps.run_shell_script:
+    id: git-checkout-commit
+    script: git checkout "{{ $GITHUB_SHA }}"
+    stream_output: false
 
 # the deployments section allows you to provide configuration for deploying flows
 deployments:
