--- a/prefect.yaml
+++ b/prefect.yaml
@@ -17,11 +17,12 @@ pull:
 - prefect.deployments.steps.git_clone:
     repository: https://github.com/kevingrismore/version-testing.git
     branch: main
+- prefect.deployments.steps.set_working_directory:
+    id: set-working-directory
+    working_directory: version-testing-main
 - prefect.deployments.steps.run_shell_script:
     id: git-checkout-commit
-    script: |
-      cd version-testing-main
-      git checkout {{ $GITHUB_SHA }}
+    script: git checkout {{ $GITHUB_SHA }}
     stream_output: false
 
 # the deployments section allows you to provide configuration for deploying flows
