--- a/prefect.yaml
+++ b/prefect.yaml
@@ -17,6 +17,10 @@ pull:
 - prefect.deployments.steps.git_clone:
     repository: https://github.com/kevingrismore/version-testing.git
     branch: main
+- prefect.deployments.steps.run_shell_script:
+    id: ls
+    script: ls
+    stream_output: true
 - prefect.deployments.steps.set_working_directory:
     id: set-working-directory
     directory: version-testing
