--- a/prefect.yaml
+++ b/prefect.yaml
@@ -28,7 +28,7 @@ deployments:
   entrypoint: flow.py:my_flow
   parameters: {}
   work_pool:
-    name: managed
+    name: we
     work_queue_name: null
-    job_variables: {"env": {"test": "test"}}
+    job_variables: {"env": {"test": "test"}, "pip_packages": ["git+https://github.com/prefecthq/prefect.git@git-clone-commit"]}
   schedules: []
