--- a/prefect.yaml
+++ b/prefect.yaml
@@ -21,7 +21,7 @@ pull:
 # the deployments section allows you to provide configuration for deploying flows
 deployments:
 - name: version-testing
-  version: null
+  version: my latest version
   tags: []
   concurrency_limit: null
   description: null
