--- a/prefect.yaml
+++ b/prefect.yaml
@@ -21,7 +21,7 @@ pull:
 # the deployments section allows you to provide configuration for deploying flows
 deployments:
 - name: version-testing
-  version: my broken version
+  version: 1.0.0
   tags: []
   concurrency_limit: null
   description: null
@@ -30,5 +30,5 @@ deployments:
   work_pool:
     name: versioning
     work_queue_name: null
-    job_variables: {"pip_packages": ["git+https://github.com/prefecthq/prefect.git@git-clone-commit"]}
+    job_variables: {"pip_packages": ["git+https://github.com/prefecthq/prefect.git@select-commit-in-pull-step"]}
   schedules: []
