--- a/prefect.yaml
+++ b/prefect.yaml
@@ -4,7 +4,7 @@
 
 # Generic metadata about this project
 name: version-testing
-prefect-version: 3.3.6.dev4+3.gdd8aa677f
+prefect-version: 3.4.0
 
 # build section allows you to manage and build docker images
 build: null
